--- a/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/components/blazor/_dropzone.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/components/blazor/_dropzone.scss
@@ -1,3 +1,5 @@
+.rz-dropzone-container {}
+
 .rz-dropzone {
   user-select:none;
 }
@@ -10,3 +12,7 @@
 .rz-dragging {
   cursor: grabbing;
 }
+
+.rz-can-drop {}
+
+.rz-no-drop {}
