--- a/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/dark-base.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/dark-base.scss
@@ -298,6 +298,9 @@ $sidebar-toggle-color: var(--rz-text-color) !default;
 // Card
 $card-flat-background-color: var(--rz-base-700) !default;
 
+// Carousel
+$rz-carousel-pager-button-active-border: 0.125rem solid var(--rz-base-800) !default;
+
 // ProfileMenu
 $profile-menu-border: var(--rz-border-base-900) !default;
 $profile-menu-toggle-button-color: var(--rz-text-color) !default;
@@ -326,6 +329,9 @@ $slider-disabled-range-background-color: var(--rz-base-700) !default;
 $slider-disabled-range-border: var(--rz-border-base-700) !default;
 $slider-disabled-handle-background-color: var(--rz-base-700) !default;
 
+// Rating
+$rating-focus-color: var(--rz-text-secondary-color) !default;
+
 // Numeric
 $numeric-button-disabled-background-color: var(--rz-base-700) !default;
 
@@ -333,6 +339,9 @@ $numeric-button-disabled-background-color: var(--rz-base-700) !default;
 $datepicker-header-background-color: var(--rz-base-800) !default;
 $datepicker-calendar-border: var(--rz-border-base-700) !default;
 $timepicker-background-color: var(--rz-base-900) !default;
+
+// TimeSpanPicker
+$timespanpicker-panel-background-color: var(--rz-base-800) !default;
 
 // Upload
 $upload-button-bar-background-color: var(--rz-base-700) !default;
@@ -346,6 +355,8 @@ $grid-header-sorted-background-color: var(--rz-base-800) !default;
 $grid-filter-background-color: var(--rz-base-800) !default;
 $grid-filter-buttons-background-color: var(--rz-base-800) !default;
 $grid-detail-template-background-color: var(--rz-base-900) !default;
+$grid-simple-filter-icon-active-color: var(--rz-on-secondary-dark) !default;
+$grid-simple-filter-icon-active-background-color: var(--rz-secondary-dark) !default;
 
 // Pager
 $pager-back-button-background-color: var(--rz-base-700) !default;
