--- a/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/standard-base.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/standard-base.scss
@@ -195,6 +195,12 @@ $panel-menu-toggle-icon-opacity: 0.4 !default;
 // Card
 $card-shadow: $rz-shadow-2 !default;
 
+// Carousel
+$rz-carousel-pager-button-border: none !default;
+$rz-carousel-pager-button-active-border: none !default;
+$rz-carousel-pager-button-hover-background-color: var(--rz-base-dark) !default;
+$rz-carousel-pager-gap: 0.75rem !default;
+
 // Steps
 $steps-number-background-color: var(--rz-base-300) !default;
 $steps-number-selected-background: var(--rz-primary) !default;
@@ -218,6 +224,8 @@ $tabs-tab-hover-color: var(--rz-primary) !default;
 // Grid
 $grid-border-radius: 0 !default;
 $grid-data-border-shadow: 0 1px 0 0 var(--rz-base-200), 0 -1px 0 0 var(--rz-base-200);
+$grid-cell-focus-background-color: var(--rz-primary-lighter) !default;
+$grid-cell-focus-color: var(--rz-on-primary-lighter) !default;
 $grid-hover-background-color: var(--rz-primary-lighter) !default;
 $grid-hover-color: var(--rz-on-primary-lighter) !default;
 $grid-selected-background-color: lighten($rz-primary-lighter, 20%) !default;
@@ -239,6 +247,8 @@ $grid-filter-buttons-background-color: var(--rz-base-100) !default;
 $grid-clear-filter-button-background-color: var(--rz-base-200) !default;
 $grid-clear-filter-button-color: var(--rz-text-color) !default;
 $grid-header-filter-icon-hover-color: var(--rz-text-title-color) !default;
+$grid-simple-filter-icon-active-color: var(--rz-on-primary-lighter) !default;
+$grid-simple-filter-icon-active-background-color: var(--rz-primary-lighter) !default;
 $grid-border: none !default;
 $grid-shadow: none !default;
 $grid-column-resizer-helper-background-color: var(--rz-primary) !default;
@@ -393,6 +403,11 @@ $timepicker-button-background-color: var(--rz-primary) !default;
 $timepicker-button-color: var(--rz-on-primary) !default;
 $timepicker-button-border-radius: var(--rz-border-radius) !default;
 
+// TimeSpanPicker
+$timespanpicker-trigger-icon-color: var(--rz-text-color) !default;
+$timespanpicker-trigger-icon-hover-color: var(--rz-text-title-color) !default;
+$timespanpicker-popup-shadow: $rz-shadow-3 !default;
+
 // Fieldset
 $fieldset-border: var(--rz-border-base-300) !default;
 $fieldset-border-radius: var(--rz-border-radius) !default;
@@ -540,6 +555,12 @@ $form-field-focus-shadow: var(--rz-input-focus-shadow) !default;
 
 // Layout
 $layout-background-color: transparent !default;
+
+// Toc
+$rz-toc-link-hover-color: var(--rz-primary-dark) !default;
+$rz-toc-link-selected-color: var(--rz-primary) !default;
+$rz-toc-link-selected-indicator-color: var(--rz-primary) !default;
+$rz-toc-horizontal-link-selected-color: var(--rz-primary) !default;
 
 @import 'fonts';
 @import 'components';
