--- a/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/standard-dark-base.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/standard-dark-base.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'mixins';
-$dark: true;
+$base: true;
+$theme-dark: true;
 $standard: true;
 $theme-name: standard-dark;
 
@@ -358,6 +359,12 @@ $panel-menu-toggle-icon-opacity: 0.4 !default;
 $card-shadow: $rz-shadow-2 !default;
 $card-flat-background-color: var(--rz-base-800) !default;
 
+// Carousel
+$rz-carousel-pager-button-border: none !default;
+$rz-carousel-pager-button-active-border: none !default;
+$rz-carousel-pager-button-hover-background-color: var(--rz-base-dark) !default;
+$rz-carousel-pager-gap: 0.75rem !default;
+
 // Steps
 $steps-number-background-color: var(--rz-base-700) !default;
 $steps-number-selected-background: var(--rz-primary) !default;
@@ -386,6 +393,8 @@ $tabs-tab-hover-background-color: var(--rz-base-600) !default;
 $grid-border-radius: 0 !default;
 $grid-cell-border: var(--rz-border-base-700);
 $grid-data-border-shadow: 0 1px 0 0 var(--rz-base-600), 0 -1px 0 0 var(--rz-base-600);
+$grid-cell-focus-background-color: var(--rz-primary-lighter) !default;
+$grid-cell-focus-color: var(--rz-on-primary-lighter) !default;
 $grid-hover-background-color: var(--rz-primary-lighter) !default;
 $grid-hover-color: var(--rz-on-primary-lighter) !default;
 $grid-selected-background-color: var(--rz-primary-lighter) !default;
@@ -408,6 +417,8 @@ $grid-clear-filter-button-background-color: var(--rz-base) !default;
 $grid-clear-filter-button-color: var(--rz-on-base) !default;
 $grid-header-filter-icon-hover-color: var(--rz-text-title-color) !default;
 $grid-header-filter-icon-active-color: var(--rz-primary) !default;
+$grid-simple-filter-icon-active-color: var(--rz-on-primary-lighter) !default;
+$grid-simple-filter-icon-active-background-color: var(--rz-primary-lighter) !default;
 $grid-sort-icon-color: var(--rz-text-color) !default;
 $grid-border: none !default;
 $grid-shadow: none !default;
@@ -538,7 +549,8 @@ $gravatar-box-shadow: $rz-shadow-inset-level-1 !default;
 
 // Panel
 $panel-toggle-icon-border-radius: var(--rz-border-radius) !default;
-$panel-hover-color: var(--rz-primary) !default;
+$panel-toggle-icon-background-color: var(--rz-base-700) !default;
+$panel-hover-color: var(--rz-primary-light) !default;
 
 // Input
 $input-shadow: none !default;
@@ -578,6 +590,12 @@ $timepicker-separator-color: var(--rz-text-disabled-color) !default;
 $timepicker-button-background-color: var(--rz-primary) !default;
 $timepicker-button-color: var(--rz-on-primary) !default;
 $timepicker-button-border-radius: var(--rz-border-radius) !default;
+
+// TimeSpanPicker
+$timespanpicker-trigger-icon-color: var(--rz-text-color) !default;
+$timespanpicker-trigger-icon-hover-color: var(--rz-text-title-color) !default;
+$timespanpicker-panel-background-color: var(--rz-base-background-color) !default;
+$timespanpicker-popup-shadow: $rz-shadow-3 !default;
 
 // Fieldset
 $fieldset-border: var(--rz-border-base-700) !default;
@@ -681,6 +699,7 @@ $listbox-filter-border: var(--rz-border-base-700) !default;
 
 // Rating
 $rating-color: var(--rz-text-tertiary-color) !default;
+$rating-focus-color: var(--rz-primary-light) !default;
 $rating-disabled-opacity: 0.5 !default;
 
 // Upload
@@ -747,6 +766,12 @@ $rz-timeline-line-color: var(--rz-base-600) !default;
 
 // Layout
 $layout-background-color: transparent !default;
+
+// Toc
+$rz-toc-link-hover-color: var(--rz-primary) !default;
+$rz-toc-link-selected-color: var(--rz-primary-light) !default;
+$rz-toc-link-selected-indicator-color: var(--rz-primary-light) !default;
+$rz-toc-horizontal-link-selected-color: var(--rz-primary-light) !default;
 
 @import 'fonts';
 @import 'components';
