--- a/src/Churchee.Presentation.Admin/Components/App.razor
+++ b/src/Churchee.Presentation.Admin/Components/App.razor
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="stylesheet" href="/_content/Churchee.Module.UI/css/admin.min.css" asp-append-version="true" />
-    <link rel="stylesheet" href="Churchee.Presentation.Admin.styles.css" />
+    <link rel="stylesheet" href="Churchee.Presentation.Admin.styles.css?v=0308" />
     <HeadOutlet @rendermode="@RenderMode.InteractiveServer" />
 </head>
 
