--- a/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/components/blazor/_grid.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/components/blazor/_grid.scss
@@ -57,6 +57,8 @@ $grid-header-filter-icon-margin-inline: auto 0.5rem !default;
 $grid-header-filter-icon-hover-color: var(--rz-text-color) !default;
 $grid-header-filter-icon-active-color: var(--rz-primary) !default;
 $grid-header-filter-icon-font-size: 1rem !default;
+$grid-simple-filter-icon-active-color: var(--rz-on-secondary-lighter) !default;
+$grid-simple-filter-icon-active-background-color: var(--rz-secondary-lighter) !default;
 $grid-border: var(--rz-border-normal) !default;
 $grid-border-radius: 0 !default;
 $grid-sort-icon-width: 1rem !default;
@@ -228,7 +230,6 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
   border-top: var(--rz-grid-cell-border);
 }
 
-.rz-datatable-thead,
 .rz-grid-table thead {
 
   th {
@@ -273,6 +274,10 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+
+      &:has(.rz-column-title-content > .rz-chkbox) {
+        overflow: visible;
+      }
     }
 
     .rz-column-title-content {
@@ -459,6 +464,16 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+
+      &.rz-text-wrap {
+        text-overflow: unset;
+        overflow: visible;
+      }
+
+      &.rz-text-nowrap {
+        text-overflow: unset;
+        overflow: visible;
+      }
 
       &:has(.rz-chkbox),
       &:has(.rz-button) {
@@ -667,7 +682,8 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
           }
         }
 
-        &.rz-frozen-cell-right {
+        &.rz-frozen-cell-right,
+        &.rz-frozen-cell-right-inner {
           &:before {
             z-index: -2;
             background-color: var(--rz-grid-frozen-cell-background-color);
@@ -690,7 +706,8 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
             }
           }
 
-          &.rz-frozen-cell-right {
+          &.rz-frozen-cell-right,
+          &.rz-frozen-cell-right-inner {
             &:after {
               background-color: var(--rz-grid-selected-background-color);
             }
@@ -719,7 +736,8 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
             }
           }
 
-          &.rz-frozen-cell-right {
+          &.rz-frozen-cell-right,
+          &.rz-frozen-cell-right-inner {
             &:after {
               background-color: var(--rz-grid-cell-focus-background-color);
               color: var(--rz-grid-cell-focus-color);
@@ -757,7 +775,8 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
               }
             }
 
-            &.rz-frozen-cell-right {
+            &.rz-frozen-cell-right,
+            &.rz-frozen-cell-right-inner {
               &:after {
                 background-color: var(--rz-grid-hover-background-color);
               }
@@ -1028,9 +1047,14 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
   }
 }
 
-.rz-grid-filter-active {
+.rzi.rz-grid-filter-active {
   color: var(--rz-grid-header-filter-icon-active-color) !important;
   --rz-icon-fill: 1;
+}
+
+.rz-button.rz-grid-filter-active {
+  color: var(--rz-grid-simple-filter-icon-active-color) !important;
+  background-color: var(--rz-grid-simple-filter-icon-active-background-color) !important;
 }
 
 .rz-data-grid {
@@ -1042,6 +1066,7 @@ $column-draggable-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.1) !default;
 .rz-data-grid-data {
   overflow: auto;
   flex: 1;
+  outline: var(--rz-outline-normal);
   box-shadow: var(--rz-grid-data-border-shadow);
 }
 
