--- a/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/material-base.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/themes/radzen/material-base.scss
@@ -11,7 +11,7 @@ $rz-black: #000000 !default;
 
 $rz-base: #eeeeee !default;
 $rz-primary: #4340D2 !default;
-$rz-secondary: #e91e63 !default;
+$rz-secondary: #e31c65 !default;
 $rz-info: #2196f3 !default;
 $rz-success: #4caf50 !default;
 $rz-warning: #ff9800 !default;
@@ -235,7 +235,7 @@ $rz-text-title-color: var(--rz-base-900) !default;
 $rz-text-color: var(--rz-base-800) !default;
 $rz-text-secondary-color: var(--rz-base-700) !default;
 $rz-text-tertiary-color: var(--rz-base-600) !default;
-$rz-text-disabled-color: var(--rz-base-500) !default;
+$rz-text-disabled-color: var(--rz-base-400) !default;
 $rz-text-contrast-color: var(--rz-white) !default;
 
 // Borders
@@ -432,6 +432,15 @@ $card-flat-background-color: var(--rz-base-background-color) !default;
 $card-shadow: var(--rz-shadow-1) !default;
 $card-border: var(--rz-border-base-300) !default;
 
+// Carousel
+$rz-carousel-pager-gap: 0.5rem !default;
+$rz-carousel-pager-button-border: none !default;
+$rz-carousel-pager-button-hover-background-color: var(--rz-base-dark) !default;
+$rz-carousel-pager-button-hover-color: var(--rz-on-base-dark) !default;
+$rz-carousel-pager-button-active-border: none !default;
+$rz-carousel-pager-button-active-background-color: var(--rz-base-dark) !default;
+$rz-carousel-pager-button-active-color: var(--rz-on-base-dark) !default;
+
 // Accordion
 $accordion-item-padding-block: 1rem !default;
 $accordion-item-padding-inline: 1rem !default;
@@ -582,7 +591,7 @@ $steps-number-background-color: var(--rz-base-500) !default;
 $steps-number-color: var(--rz-text-contrast-color) !default;
 
 .rz-steps {
-  [role='tablist'] {
+  > ul {
     display: flex;
   }
   .rz-steps-item {
@@ -609,11 +618,11 @@ $checkbox-label-margin-inline: 1rem !default;
 $checkbox-checked-background-color: var(--rz-primary) !default;
 $checkbox-checked-color: var(--rz-on-primary) !default;
 $checkbox-checked-hover-background-color: var(--rz-primary-light) !default;
-$checkbox-checked-disabled-background-color: var(--rz-base-500) !default;
+$checkbox-checked-disabled-background-color: var(--rz-base-400) !default;
 $checkbox-checked-shadow: none !default;
 $checkbox-checked-border: var(--rz-border-primary) !default;
 $checkbox-checked-hover-border: var(--rz-border-primary) !default;
-$checkbox-checked-disabled-border: var(--rz-border-base-500) !default;
+$checkbox-checked-disabled-border: var(--rz-border-base-400) !default;
 
 .rz-chkbox-box {
   &:after {
@@ -847,7 +856,7 @@ $selectbar-selected-color: var(--rz-on-primary-lighter) !default;
 $selectbar-selected-border: var(--rz-border-base-300) !default;
 $selectbar-border-radius: var(--rz-border-radius) !default;
 
-.rz-selectbutton {
+.rz-selectbar {
   .rz-button {
     box-shadow: none;
     &:hover {
@@ -943,6 +952,24 @@ $timepicker-border: var(--rz-border-base-300) !default;
   }
 }
 
+// TimeSpanPicker
+$timespanpicker-line-height: 1.5rem !default;
+$timespanpicker-trigger-icon-color: var(--rz-text-secondary-color) !default;
+$timespanpicker-trigger-icon-hover-color: var(--rz-text-title-color) !default;
+$timespanpicker-popup-border: none !default;
+$timespanpicker-popup-shadow: var(--rz-shadow-4) !default;
+$timespanpicker-panel-padding: 0.75rem !default;
+$timespanpicker-panel-unit-gap: 0.25rem !default;
+$timespanpicker-panel-field-min-width: 5rem !default;
+
+.rz-timespanpicker-panel {
+  flex-direction: column;
+
+  > .rz-button {
+    align-self: stretch;
+  }
+}
+
 // Numeric
 $numeric-button-background-color: transparent !default;
 $numeric-button-color: var(--rz-text-color) !default;
@@ -1023,6 +1050,8 @@ $grid-apply-filter-button-shadow: none !default;
 $grid-header-filter-icon-margin-inline: auto 1rem !default;
 $grid-header-filter-icon-hover-color: var(--rz-text-title-color) !default;
 $grid-header-filter-icon-font-size: 1.25rem !default;
+$grid-simple-filter-icon-active-color: var(--rz-on-primary-lighter) !default;
+$grid-simple-filter-icon-active-background-color: var(--rz-primary-lighter) !default;
 $grid-border: var(--rz-border-base-300) !default;
 $grid-sort-icon-width: 1.25rem !default;
 $grid-shadow: none !default;
@@ -1488,6 +1517,18 @@ $form-field-label-inset-inline-start: 0.6875rem !default;
 $form-field-label-textarea-top: 0.5rem !default;
 $form-field-label-floating-top: -0.5625rem !default;
 $form-field-helper-padding: 0 1rem !default;
+
+// Toc
+$rz-toc-link-hover-color: var(--rz-primary-dark) !default;
+$rz-toc-link-selected-color: var(--rz-primary) !default;
+$rz-toc-link-selected-indicator-inset-block: 0 !default;
+$rz-toc-link-selected-indicator-color: var(--rz-primary) !default;
+$rz-toc-horizontal-link-selected-color: var(--rz-primary) !default;
+$rz-toc-horizontal-link-selected-indicator-inset-inline: 0 !default;
+
+.rz-toc-link {
+  @include rz-ripple($pseudo: true);
+}
 
 @import 'fonts';
 @import 'components';
